Fixed Bug where unneeded scrollbars appear

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
     font-size:1em;
     line-height:1.5em;
     max-height:65vh;
-    overflow:scroll;
+    overflow:auto;
 }
 
  #header {
